--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,6 +1,21 @@
+@font-face {
+    font-family: "Roboto-Thin";
+    src: url("../fonts/Roboto-Thin.ttf") format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "Roboto";
+    src: url("../fonts/Roboto-Regular.ttf") format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
 html, body {
 	height: 100%;
 	width: 100%;
+	font-family: 'Roboto-Thin';
 }
 
 #app-container {
